Removed redundant wait-for-services.sh; Optimized circleci config. Optimized mysql cli.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - eventuate-tram-core-reactive-examples-basic-{{ checksum "gradle.properties" }}
+            - eventuate-tram-core-reactive-examples-basic-{{ checksum "gradle.properties" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
             - eventuate-tram-core-reactive-examples-basic-
       - run:
           command: |
@@ -17,7 +17,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: eventuate-tram-core-reactive-examples-basic-{{ checksum "gradle.properties" }}
+          key: eventuate-tram-core-reactive-examples-basic-{{ checksum "gradle.properties" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
       - run:
           command: |
             . ./.circleci/setenv-circle-ci.sh
