Upgraded eventuate dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,5 @@ springBootVersion=2.1.1.RELEASE
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.15.0.BUILD-SNAPSHOT
-eventuateCdcImageVersion=0.12.0.RELEASE
-eventuateTramVersion=0.30.0-SNAPSHOT-2
+eventuateCdcImageVersion=0.13.0.BUILD-SNAPSHOT
+eventuateTramVersion=0.30.0.BUILD-SNAPSHOT
