--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,6 @@ springBootVersion=2.1.1.RELEASE
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.17.0.RELEASE
+eventuateMessagingKafkaImageVersion=0.15.0.BUILD-SNAPSHOT
 eventuateCdcImageVersion=0.15.0.RELEASE
 eventuateTramVersion=0.32.0.RELEASE
