--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ springBootVersion=2.1.1.RELEASE
 
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.19.0.RELEASE
-eventuateMessagingKafkaImageVersion=0.19.0.RELEASE
-eventuateCdcImageVersion=0.17.0.RELEASE
-eventuateTramVersion=0.35.0.RELEASE
+eventuateCommonImageVersion=0.20.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaImageVersion=0.20.0.BUILD-SNAPSHOT
+eventuateCdcImageVersion=0.18.0.BUILD-SNAPSHOT
+eventuateTramVersion=0.36.0.BUILD-SNAPSHOT
